fixed top spacing, calculator is more towards top of screen

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1{
     font-family: 'Pacifico', cursive;
     font-size:50px;
     margin:auto;
-    margin-top:10%;
+    margin-top:5%;
     padding-top:8px;
     border-radius:7px;
     background-color:#6B5B95;
@@ -28,7 +28,7 @@ h3{
 #calc{
     margin-left:auto;
     margin-right:auto;
-    margin-top:8%;
+    margin-top:5%;
     border-radius: 15px;
     padding:40px;
     height:500px;
